// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event addLocation 1`] = `
Object {
  "Event": Object {
    "__typename": "Event",
    "locations": Array [
      Object {
        "__typename": "Location",
        "timeline": Array [
          Object {
            "__typename": "Event",
            "title": "Test",
          },
        ],
        "title": "test",
      },
    ],
  },
}
`;

exports[`Event createAtLocation 1`] = `
Object {
  "Event": Object {
    "__typename": "Event",
    "locations": Array [
      Object {
        "__typename": "Location",
        "timeline": Array [
          Object {
            "__typename": "Event",
            "title": "Test",
          },
        ],
        "title": "test",
      },
    ],
  },
}
`;

exports[`Event createForCollection 1`] = `
Object {
  "Event": Object {
    "__typename": "Event",
    "collections": Array [
      Object {
        "__typename": "Collection",
        "timeline": Array [
          Object {
            "__typename": "Event",
            "title": "Test",
          },
        ],
        "title": "test",
      },
    ],
  },
}
`;

exports[`Event createForConcept 1`] = `
Object {
  "Event": Object {
    "__typename": "Event",
    "concepts": Array [
      Object {
        "__typename": "Concept",
        "events": Array [
          Object {
            "__typename": "Event",
            "title": "Test",
          },
        ],
        "title": "test",
      },
    ],
  },
}
`;

exports[`Event createForIdea 1`] = `
Object {
  "Event": Object {
    "__typename": "Event",
    "ideas": Array [
      Object {
        "__typename": "Idea",
        "events": Array [
          Object {
            "__typename": "Event",
            "title": "Test",
          },
        ],
        "title": "test",
      },
    ],
  },
}
`;

exports[`Event createForItem 1`] = `
Object {
  "Event": Object {
    "__typename": "Event",
    "items": Array [
      Object {
        "__typename": "Item",
        "timeline": Array [
          Object {
            "__typename": "Event",
            "title": "Test",
          },
        ],
        "title": "test",
      },
    ],
  },
}
`;

exports[`Event createForPerson 1`] = `
Object {
  "Event": Object {
    "__typename": "Event",
    "people": Array [
      Object {
        "__typename": "Person",
        "timeline": Array [
          Object {
            "__typename": "Event",
            "title": "Test",
          },
        ],
        "title": "test",
      },
    ],
  },
}
`;

exports[`Event createInSpace 1`] = `
Object {
  "Space": Object {
    "__typename": "Space",
    "events": Array [
      Object {
        "__typename": "Event",
        "spaces": Array [
          Object {
            "__typename": "Space",
            "title": "createInSpace",
          },
        ],
        "title": "Test",
      },
    ],
  },
}
`;

exports[`Event removeLocation 1`] = `
Object {
  "Event": Object {
    "__typename": "Event",
    "locations": Array [],
  },
}
`;
